(#3) Move from Grails to NodeJs app